# TinyML-Split-Computing

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
esp32_board/nn_runner/src/: main.cpp
heyot/: requirements.txt
heyot/mqtt_client/: MQTTClientManager.py
heyot/neural_networks/: NNManager.py  views.py
heyot/neural_networks/ai_models/: ConvertModel.ipynb  CreateAnalytics.py
simple-device/: SimpleDevice.py
src/: Dockerfile  app.py  gunicorn_starter.sh
src/configs/: configs.py
src/custom_models/: create_train_model.py  custom_model.py  model_data.py  model_splitter.ipynb  test_single_layer_prediction.py
src/flask_server/: __init__.py
src/flask_server/configs/: configs.py  logger_config.json
src/flask_server/logger/: Logger.py
src/logger/: Logger.py  logger_config.json
src/nn_model/: create_train_model.py  custom_model.py  model_builder.py  model_data.py  model_manager.py  offloading_model_manager.py  test_single_layer_prediction.py  tf_model_manager.py
src/offloading-examples/: SimpleDevice.py  inference_example.py  initialization_example.py  offloading_evaluation_example.py
src/offloading_tools/: offloading_algo.py  offloading_communication.py  offloading_device.py  offloading_manager.py  offloading_message.py  offloading_model.py
src/simple-device/: SimpleDevice.py
tests/: conftest.py  test_offloading_algo.py  test_offloading_api.py  test_offloading_communication.py  test_offloading_device.py  test_offloading_manager_class.py  test_offloading_message.py  test_run_app.py
(+42 files in other folders)
