[project]
name = "TynyML-Split-Computing"
dynamic = ["version"]
authors = [
    { name = "Fabio Bove", email = "fabio.bove.dr@gmail.com" },
]
description = "TynyML-Split-Computing Repository"
readme = "README.md"
dependencies = [
    "apispec==6.6.1",
    "blinker==1.8.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "coverage==7.5.1",
    "Flask==3.0.3",
    "flask-smorest==0.44.0",
    "gunicorn==22.0.0",
    "idna==3.7",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "marshmallow==3.21.2",
    "packaging==24.0",
    "pluggy==1.5.0",
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "requests==2.31.0",
    "urllib3==2.2.1",
    "webargs==8.4.0",
    "Werkzeug==3.0.3",
    "pytest-md==0.2.0",
    "git-changelog==2.5.2",
    "scikit-learn==1.5.1",
    "pillow==10.4.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools-git-versioning]
enabled = true

[build-system]
requires = ["setuptools >= 61.0", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"